--- a/dynaportal/templates/dynaportal/home.html
+++ b/dynaportal/templates/dynaportal/home.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 {%if page%}<h1 class="govuk-heading-xl">{{page.title}}</h1>{%endif%}
-
+<form method="post" action=""{{action}}>{% csrf_token %}
 {% for field in fields %}
     {% if field.field_type.name == 'INPUT_TEXT' %}
 {% text_input field %}
@@ -19,5 +19,5 @@
 {% radios field %}
     {% endif %}
 {% endfor %}
-
+</form>
 {% endblock content %}
